[build-system]
#requires = ["setuptools>=42", "wheel"]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dr14meter"
version = "1.1.5a3"
description = "Compute the dynamic range DR14 value of the given audio files"
keywords = ["dr14", "dynamic range", 'loudness war']
authors = [
    { name = "pe7ro", email = "44572319+pe7ro@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.6"
# https://devguide.python.org/versions/
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis"
]

dependencies = [
    "numpy",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=2",
    'scipy',
]
tagging = [
    'mutagen',
]
# matplotlib 3.9.3
# mutagen   1.47.0
# numpy     2.1.3
# scipy     1.13.1

[project.urls]
"Homepage" = "https://github.com/pe7ro/dr14meter"
"Bug Reports" = "https://github.com/pe7ro/dr14meter/issues"
"Source" = "https://github.com/pe7ro/dr14meter"

[project.scripts]
dr14meter = "dr14meter.dr14_main:main"

#[tool.setuptools]
#packages = ["dr14tmeter"]
#scripts = ["dr14tmeter"]